Update scripts to work with new WFRC segments

--- a/1-Get-Historic-Data-and-Factors.ipynb
+++ b/1-Get-Historic-Data-and-Factors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "[99893 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
        "[4573 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
        "[4573 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1081,7 @@
        "[4558 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1634,7 @@
        "[4798 rows x 45 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1663,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1745,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1875,7 @@
        "[279111 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1931,7 +1931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2061,7 +2061,7 @@
        "[288640 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2075,7 +2075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2098,7 +2098,7 @@
        "Name: SEGID, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2110,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2131,7 +2131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2378,7 +2378,7 @@
        "25744   WFv901_Segments_20240226_Draft.shp  2330_005.2  2022  4263"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2396,7 +2396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2436,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2462,6 +2462,7 @@
        "      <th></th>\n",
        "      <th>SOURCE</th>\n",
        "      <th>SEGID</th>\n",
+       "      <th>SAID_FAC</th>\n",
        "      <th>FACMANADJ</th>\n",
        "      <th>FAC_APR</th>\n",
        "      <th>FAC_AUG</th>\n",
@@ -2469,7 +2470,6 @@
        "      <th>FAC_FAL</th>\n",
        "      <th>FAC_FEB</th>\n",
        "      <th>FAC_FRI</th>\n",
-       "      <th>FAC_JAN</th>\n",
        "      <th>...</th>\n",
        "      <th>FAC_SPR</th>\n",
        "      <th>FAC_SUM</th>\n",
@@ -2489,13 +2489,13 @@
        "      <td>Segments_State_20231221_Draft.shp</td>\n",
        "      <td>0006_000.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0366</td>\n",
        "      <td>1.0897</td>\n",
        "      <td>0.8822</td>\n",
        "      <td>1.0316</td>\n",
        "      <td>0.8504</td>\n",
        "      <td>1.1505</td>\n",
-       "      <td>0.8159</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0276</td>\n",
        "      <td>1.0914</td>\n",
@@ -2513,13 +2513,13 @@
        "      <td>Segments_State_20231221_Draft.shp</td>\n",
        "      <td>0006_000.7</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0366</td>\n",
        "      <td>1.0897</td>\n",
        "      <td>0.8822</td>\n",
        "      <td>1.0316</td>\n",
        "      <td>0.8504</td>\n",
        "      <td>1.1505</td>\n",
-       "      <td>0.8159</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0276</td>\n",
        "      <td>1.0914</td>\n",
@@ -2537,13 +2537,13 @@
        "      <td>Segments_State_20231221_Draft.shp</td>\n",
        "      <td>0006_016.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0366</td>\n",
        "      <td>1.0897</td>\n",
        "      <td>0.8822</td>\n",
        "      <td>1.0316</td>\n",
        "      <td>0.8504</td>\n",
        "      <td>1.1505</td>\n",
-       "      <td>0.8159</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0276</td>\n",
        "      <td>1.0914</td>\n",
@@ -2561,13 +2561,13 @@
        "      <td>Segments_State_20231221_Draft.shp</td>\n",
        "      <td>0006_046.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0366</td>\n",
        "      <td>1.0897</td>\n",
        "      <td>0.8822</td>\n",
        "      <td>1.0316</td>\n",
        "      <td>0.8504</td>\n",
        "      <td>1.1505</td>\n",
-       "      <td>0.8159</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0276</td>\n",
        "      <td>1.0914</td>\n",
@@ -2585,13 +2585,13 @@
        "      <td>Segments_State_20231221_Draft.shp</td>\n",
        "      <td>0006_060.2</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0366</td>\n",
        "      <td>1.0897</td>\n",
        "      <td>0.8822</td>\n",
        "      <td>1.0316</td>\n",
        "      <td>0.8504</td>\n",
        "      <td>1.1505</td>\n",
-       "      <td>0.8159</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0276</td>\n",
        "      <td>1.0914</td>\n",
@@ -2632,6 +2632,7 @@
        "      <th>4975</th>\n",
        "      <td>WFv901_Segments_20240226_Draft.shp</td>\n",
        "      <td>WFRC_8469</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0146</td>\n",
        "      <td>1.0396</td>\n",
@@ -2639,7 +2640,6 @@
        "      <td>1.0243</td>\n",
        "      <td>0.9471</td>\n",
        "      <td>1.1418</td>\n",
-       "      <td>0.9024</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0104</td>\n",
        "      <td>1.0283</td>\n",
@@ -2656,6 +2656,7 @@
        "      <th>4976</th>\n",
        "      <td>WFv901_Segments_20240226_Draft.shp</td>\n",
        "      <td>WFRC_8470</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0119</td>\n",
        "      <td>1.0724</td>\n",
@@ -2663,7 +2664,6 @@
        "      <td>1.0324</td>\n",
        "      <td>0.8982</td>\n",
        "      <td>1.1558</td>\n",
-       "      <td>0.8600</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0107</td>\n",
        "      <td>1.0575</td>\n",
@@ -2680,6 +2680,7 @@
        "      <th>4977</th>\n",
        "      <td>WFv901_Segments_20240226_Draft.shp</td>\n",
        "      <td>WFRC_8471</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0146</td>\n",
        "      <td>1.0396</td>\n",
@@ -2687,7 +2688,6 @@
        "      <td>1.0243</td>\n",
        "      <td>0.9471</td>\n",
        "      <td>1.1418</td>\n",
-       "      <td>0.9024</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0104</td>\n",
        "      <td>1.0283</td>\n",
@@ -2704,6 +2704,7 @@
        "      <th>4978</th>\n",
        "      <td>WFv901_Segments_20240226_Draft.shp</td>\n",
        "      <td>WFRC_8472</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0142</td>\n",
        "      <td>1.0223</td>\n",
@@ -2711,7 +2712,6 @@
        "      <td>1.0095</td>\n",
        "      <td>0.9705</td>\n",
        "      <td>1.1450</td>\n",
-       "      <td>0.9346</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0117</td>\n",
        "      <td>1.0135</td>\n",
@@ -2728,6 +2728,7 @@
        "      <th>4979</th>\n",
        "      <td>WFv901_Segments_20240226_Draft.shp</td>\n",
        "      <td>WFRC_8473</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0146</td>\n",
        "      <td>1.0396</td>\n",
@@ -2735,7 +2736,6 @@
        "      <td>1.0243</td>\n",
        "      <td>0.9471</td>\n",
        "      <td>1.1418</td>\n",
-       "      <td>0.9024</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0104</td>\n",
        "      <td>1.0283</td>\n",
@@ -2750,35 +2750,35 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>13947 rows × 31 columns</p>\n",
+       "<p>13947 rows × 32 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  SOURCE       SEGID  FACMANADJ  FAC_APR  \\\n",
-       "0      Segments_State_20231221_Draft.shp  0006_000.0        0.0   1.0366   \n",
-       "1      Segments_State_20231221_Draft.shp  0006_000.7        0.0   1.0366   \n",
-       "2      Segments_State_20231221_Draft.shp  0006_016.0        0.0   1.0366   \n",
-       "3      Segments_State_20231221_Draft.shp  0006_046.0        0.0   1.0366   \n",
-       "4      Segments_State_20231221_Draft.shp  0006_060.2        0.0   1.0366   \n",
-       "...                                  ...         ...        ...      ...   \n",
-       "4975  WFv901_Segments_20240226_Draft.shp   WFRC_8469        0.0   1.0146   \n",
-       "4976  WFv901_Segments_20240226_Draft.shp   WFRC_8470        0.0   1.0119   \n",
-       "4977  WFv901_Segments_20240226_Draft.shp   WFRC_8471        0.0   1.0146   \n",
-       "4978  WFv901_Segments_20240226_Draft.shp   WFRC_8472        0.0   1.0142   \n",
-       "4979  WFv901_Segments_20240226_Draft.shp   WFRC_8473        0.0   1.0146   \n",
+       "                                  SOURCE       SEGID  SAID_FAC  FACMANADJ  \\\n",
+       "0      Segments_State_20231221_Draft.shp  0006_000.0       0.0        0.0   \n",
+       "1      Segments_State_20231221_Draft.shp  0006_000.7       0.0        0.0   \n",
+       "2      Segments_State_20231221_Draft.shp  0006_016.0       0.0        0.0   \n",
+       "3      Segments_State_20231221_Draft.shp  0006_046.0       0.0        0.0   \n",
+       "4      Segments_State_20231221_Draft.shp  0006_060.2       0.0        0.0   \n",
+       "...                                  ...         ...       ...        ...   \n",
+       "4975  WFv901_Segments_20240226_Draft.shp   WFRC_8469       1.0        0.0   \n",
+       "4976  WFv901_Segments_20240226_Draft.shp   WFRC_8470       1.0        0.0   \n",
+       "4977  WFv901_Segments_20240226_Draft.shp   WFRC_8471       1.0        0.0   \n",
+       "4978  WFv901_Segments_20240226_Draft.shp   WFRC_8472       1.0        0.0   \n",
+       "4979  WFv901_Segments_20240226_Draft.shp   WFRC_8473       1.0        0.0   \n",
        "\n",
-       "      FAC_AUG  FAC_DEC  FAC_FAL  FAC_FEB  FAC_FRI  FAC_JAN  ...  FAC_SPR  \\\n",
-       "0      1.0897   0.8822   1.0316   0.8504   1.1505   0.8159  ...   1.0276   \n",
-       "1      1.0897   0.8822   1.0316   0.8504   1.1505   0.8159  ...   1.0276   \n",
-       "2      1.0897   0.8822   1.0316   0.8504   1.1505   0.8159  ...   1.0276   \n",
-       "3      1.0897   0.8822   1.0316   0.8504   1.1505   0.8159  ...   1.0276   \n",
-       "4      1.0897   0.8822   1.0316   0.8504   1.1505   0.8159  ...   1.0276   \n",
+       "      FAC_APR  FAC_AUG  FAC_DEC  FAC_FAL  FAC_FEB  FAC_FRI  ...  FAC_SPR  \\\n",
+       "0      1.0366   1.0897   0.8822   1.0316   0.8504   1.1505  ...   1.0276   \n",
+       "1      1.0366   1.0897   0.8822   1.0316   0.8504   1.1505  ...   1.0276   \n",
+       "2      1.0366   1.0897   0.8822   1.0316   0.8504   1.1505  ...   1.0276   \n",
+       "3      1.0366   1.0897   0.8822   1.0316   0.8504   1.1505  ...   1.0276   \n",
+       "4      1.0366   1.0897   0.8822   1.0316   0.8504   1.1505  ...   1.0276   \n",
        "...       ...      ...      ...      ...      ...      ...  ...      ...   \n",
-       "4975   1.0396   0.9616   1.0243   0.9471   1.1418   0.9024  ...   1.0104   \n",
-       "4976   1.0724   0.9399   1.0324   0.8982   1.1558   0.8600  ...   1.0107   \n",
-       "4977   1.0396   0.9616   1.0243   0.9471   1.1418   0.9024  ...   1.0104   \n",
-       "4978   1.0223   0.9907   1.0095   0.9705   1.1450   0.9346  ...   1.0117   \n",
-       "4979   1.0396   0.9616   1.0243   0.9471   1.1418   0.9024  ...   1.0104   \n",
+       "4975   1.0146   1.0396   0.9616   1.0243   0.9471   1.1418  ...   1.0104   \n",
+       "4976   1.0119   1.0724   0.9399   1.0324   0.8982   1.1558  ...   1.0107   \n",
+       "4977   1.0146   1.0396   0.9616   1.0243   0.9471   1.1418  ...   1.0104   \n",
+       "4978   1.0142   1.0223   0.9907   1.0095   0.9705   1.1450  ...   1.0117   \n",
+       "4979   1.0146   1.0396   0.9616   1.0243   0.9471   1.1418  ...   1.0104   \n",
        "\n",
        "      FAC_SUM  FAC_SUN  FAC_THU  FAC_TUE  FAC_WDAVG  FAC_WEAVG  FAC_WED  \\\n",
        "0      1.0914   0.8819   1.0120   0.9628     0.9840     0.9734   0.9773   \n",
@@ -2806,10 +2806,10 @@
        "4978     0.8873   0.9653  \n",
        "4979     0.9245   0.9370  \n",
        "\n",
-       "[13947 rows x 31 columns]"
+       "[13947 rows x 32 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2823,13 +2823,14 @@
     "    col for col in _df.columns \n",
     "    if 'FAC' in col\n",
     "]\n",
-    "dfFactors = _df[['SOURCE','SEGID'] + fac_columns]\n",
+    "dfFactors = _df[['SOURCE','SEGID','SUBAREAID'] + fac_columns].copy()\n",
+    "dfFactors.rename(columns={'SUBAREAID':'SAID_FAC'}, inplace=True)\n",
     "dfFactors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
