Finish piecing together

--- a/3-Prepare-Model-Forecasts.ipynb
+++ b/3-Prepare-Model-Forecasts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,8 @@
     "],columns=('SOURCE','SUBAREAID'))\n",
     "\n",
     "dfObsVolSource = dfObsVolSource.explode('SUBAREAID')\n",
+    "\n",
+    "dfObsVolSource.to_csv('intermediate/obsvolsource.csv',index=False)\n",
     "\n",
     "# base year adjustment\n",
     "# segment shapefile with AADT and previous forecasts - copied from 'A:/1 - TDM/3 - Model Dev/1 - WF/1 - Official Release/v9x/v9.0/WF TDM v9.0 - official/1_Inputs/6_Segment/Segments_WF - 2023-08-01.shp'\n",
@@ -60,6 +62,8 @@
     "    ['2863_000.0', 4],\n",
     "    ['2865_019.4', 4]\n",
     "], columns=('SEGID','removeSUBAREAID'))\n",
+    "\n",
+    "duplicateSegsInTdms.to_csv('intermediate/duplicateSegsInTdms.csv',index=False)\n",
     "\n",
     "dfModelSegSummaries = pd.DataFrame( [\n",
     "    [0, 2019, 'data/model-output/0_USTM_v3.0 - 2024-02-20_DRAFT/_Summary_SEGID_BY2019.csv'     ],\n",
@@ -111,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +572,7 @@
        "[48287 rows x 8 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1143,7 @@
        "          2050      233                 0.0"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2039,7 +2043,7 @@
        "[2942 rows x 13 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2051,7 +2055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2122,7 +2126,7 @@
        "2        2.0  Transition  1.021054  0.999425   1.068011    1.010239"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2134,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2414,7 +2418,7 @@
        "11   1.088912    1.016488  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2426,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2690,7 +2694,7 @@
        "[48287 rows x 13 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2709,7 +2713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2924,7 +2928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3074,7 +3078,7 @@
        "45000  2865_019.4            4.0            1.0"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3099,7 +3103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3184,7 +3188,7 @@
        "2865_019.4              4              1"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3224,7 +3228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3309,7 +3313,7 @@
        "7  2865_019.4                4"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3320,7 +3324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3584,7 +3588,7 @@
        "[48239 rows x 13 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3613,7 +3617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3652,7 +3656,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3682,7 +3686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3995,7 +3999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -4136,7 +4140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4168,7 +4172,7 @@
        "      <th>LANES</th>\n",
        "      <th>modAadt</th>\n",
        "      <th>obsAadt</th>\n",
-       "      <th>aadtAdjFactor</th>\n",
+       "      <th>aadtAdjFac</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4323,18 +4327,18 @@
        "7707  1767_000.2        5.0     0.0  4.0       Urban    2.0        0   2732.0   \n",
        "7777   UDOT_7043        5.0     0.0  4.0  Transition    2.0        0      0.0   \n",
        "\n",
-       "      aadtAdjFactor  \n",
-       "188          2605.0  \n",
-       "245           179.0  \n",
-       "246           179.0  \n",
-       "900            77.0  \n",
-       "914          1055.0  \n",
-       "...             ...  \n",
-       "7655            0.0  \n",
-       "7667            0.0  \n",
-       "7671            0.0  \n",
-       "7707         2732.0  \n",
-       "7777            0.0  \n",
+       "      aadtAdjFac  \n",
+       "188       2605.0  \n",
+       "245        179.0  \n",
+       "246        179.0  \n",
+       "900         77.0  \n",
+       "914       1055.0  \n",
+       "...          ...  \n",
+       "7655         0.0  \n",
+       "7667         0.0  \n",
+       "7671         0.0  \n",
+       "7707      2732.0  \n",
+       "7777         0.0  \n",
        "\n",
        "[190 rows x 9 columns]"
       ]
@@ -4364,7 +4368,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>SEGID</th>\n",
-       "      <th>aadtAdjFactor</th>\n",
+       "      <th>aadtAdjFac</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4429,18 +4433,18 @@
        "</div>"
       ],
       "text/plain": [
-       "           SEGID  aadtAdjFactor\n",
-       "0     1831_000.0            0.0\n",
-       "1     1180_002.5            0.0\n",
-       "2     0006_000.0          286.0\n",
-       "3     0006_000.7          198.0\n",
-       "4     0006_016.0          337.0\n",
-       "...          ...            ...\n",
-       "7773  3217_001.9         -373.0\n",
-       "7774  3217_008.3         -692.0\n",
-       "7775  3218_006.4            0.0\n",
-       "7776   UDOT_7008            0.0\n",
-       "7777   UDOT_7043            0.0\n",
+       "           SEGID  aadtAdjFac\n",
+       "0     1831_000.0         0.0\n",
+       "1     1180_002.5         0.0\n",
+       "2     0006_000.0       286.0\n",
+       "3     0006_000.7       198.0\n",
+       "4     0006_016.0       337.0\n",
+       "...          ...         ...\n",
+       "7773  3217_001.9      -373.0\n",
+       "7774  3217_008.3      -692.0\n",
+       "7775  3218_006.4         0.0\n",
+       "7776   UDOT_7008         0.0\n",
+       "7777   UDOT_7043         0.0\n",
        "\n",
        "[7778 rows x 2 columns]"
       ]
@@ -4456,20 +4460,20 @@
     "_df = pd.DataFrame.merge(dfModAadt_BaseYear[use_fields + ['modAadt']], dfObsAadt_BaseYear[['SEGID','obsAadt']], on='SEGID', how='left')\n",
     "_df.fillna(0,inplace=True)\n",
     "\n",
-    "_df['aadtAdjFactor'] = _df['obsAadt'] - _df['modAadt']\n",
+    "_df['aadtAdjFac'] = _df['obsAadt'] - _df['modAadt']\n",
     "\n",
-    "_df.loc[(_df['obsAadt']==0), 'aadtAdjFactor'] = 0\n",
+    "_df.loc[(_df['obsAadt']==0), 'aadtAdjFac'] = 0\n",
     "\n",
     "display(_df[_df['modAadt']==0])\n",
     "\n",
-    "dfModAdjFactor = _df[['SEGID','aadtAdjFactor']]\n",
+    "dfModAdjFactor = _df[['SEGID','aadtAdjFac']]\n",
     "\n",
     "display(dfModAdjFactor)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4491,7 +4495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -4529,7 +4533,7 @@
        "      <th>FAC_WDAVG</th>\n",
        "      <th>FAC_SPRFAL</th>\n",
        "      <th>modAadt</th>\n",
-       "      <th>aadtAdjFactor</th>\n",
+       "      <th>aadtAdjFac</th>\n",
        "      <th>modForecast</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -4775,23 +4779,23 @@
        "48237  Segments_State_20231221_Draft.shp       5.0  1.031600  1.027600   \n",
        "48238  Segments_State_20231221_Draft.shp       5.0  1.032400  1.010700   \n",
        "\n",
-       "       FAC_WDAVG  FAC_SPRFAL  modAadt  aadtAdjFactor  modForecast  \n",
-       "0       1.073789    1.020146     1818              0         1800  \n",
-       "1       1.073789    1.020146     1939              0         1900  \n",
-       "2       1.073789    1.020146     2147              0         2100  \n",
-       "3       1.073789    1.020146     2283              0         2300  \n",
-       "4       1.073789    1.020146     2631              0         2600  \n",
-       "...          ...         ...      ...            ...          ...  \n",
-       "48234   0.984000    1.029600       50              0           50  \n",
-       "48235   0.984000    1.029600     4249              0         4200  \n",
-       "48236   0.984000    1.029600     7377              0         7400  \n",
-       "48237   0.984000    1.029600      461              0          450  \n",
-       "48238   1.091800    1.021550        0              0            0  \n",
+       "       FAC_WDAVG  FAC_SPRFAL  modAadt  aadtAdjFac  modForecast  \n",
+       "0       1.073789    1.020146     1818           0         1800  \n",
+       "1       1.073789    1.020146     1939           0         1900  \n",
+       "2       1.073789    1.020146     2147           0         2100  \n",
+       "3       1.073789    1.020146     2283           0         2300  \n",
+       "4       1.073789    1.020146     2631           0         2600  \n",
+       "...          ...         ...      ...         ...          ...  \n",
+       "48234   0.984000    1.029600       50           0           50  \n",
+       "48235   0.984000    1.029600     4249           0         4200  \n",
+       "48236   0.984000    1.029600     7377           0         7400  \n",
+       "48237   0.984000    1.029600      461           0          450  \n",
+       "48238   1.091800    1.021550        0           0            0  \n",
        "\n",
        "[48239 rows x 16 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4800,9 +4804,9 @@
     "# ADJUST ALL MODEL VOLUMES BASED ON BASE YEAR ADJ FACTOR\n",
     "\n",
     "dfModWithAdj = pd.DataFrame.merge(dfModAadt, dfModAdjFactor, on='SEGID', how='left')\n",
-    "dfModWithAdj['aadtAdjFactor'].fillna(0,inplace=True)\n",
-    "dfModWithAdj['aadtAdjFactor'] = dfModWithAdj['aadtAdjFactor'].astype(int)\n",
-    "dfModWithAdj['modForecast'] = (dfModWithAdj['modAadt'] + dfModWithAdj['aadtAdjFactor']).apply(custom_rounding).astype(int)\n",
+    "dfModWithAdj['aadtAdjFac'].fillna(0,inplace=True)\n",
+    "dfModWithAdj['aadtAdjFac'] = dfModWithAdj['aadtAdjFac'].astype(int)\n",
+    "dfModWithAdj['modForecast'] = (dfModWithAdj['modAadt'] + dfModWithAdj['aadtAdjFac']).apply(custom_rounding).astype(int)\n",
     "dfModWithAdj\n",
     "\n",
     "# remove 2019 since it is base\n",
@@ -4816,7 +4820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -4854,7 +4858,7 @@
        "      <th>FAC_WDAVG</th>\n",
        "      <th>FAC_SPRFAL</th>\n",
        "      <th>modAadt</th>\n",
-       "      <th>aadtAdjFactor</th>\n",
+       "      <th>aadtAdjFac</th>\n",
        "      <th>modForecast</th>\n",
        "      <th>obsAadt</th>\n",
        "      <th>ModVsObs</th>\n",
@@ -5124,18 +5128,18 @@
        "6861  Segments_State_20231221_Draft.shp       5.0   1.1599   0.7083   \n",
        "6862  Segments_State_20231221_Draft.shp       5.0   1.0127   1.0232   \n",
        "\n",
-       "      FAC_WDAVG  FAC_SPRFAL  modAadt  aadtAdjFactor  modForecast  obsAadt  \\\n",
-       "0        0.9840     1.02960      129            286          400      415   \n",
-       "1        0.9840     1.02960      217            198          400      415   \n",
-       "2        0.9840     1.02960       78            337          400      415   \n",
-       "3        0.9840     1.02960       78            294          350      372   \n",
-       "4        0.9840     1.02960       82            290          350      372   \n",
-       "...         ...         ...      ...            ...          ...      ...   \n",
-       "6858     0.9840     1.02960     1784            207         2000     1991   \n",
-       "6859     0.9840     1.02960     1285            706         2000     1991   \n",
-       "6860     0.9840     1.02960     2417           -578         1800     1839   \n",
-       "6861     0.8535     0.93410     1335           -763          550      572   \n",
-       "6862     1.0712     1.01795      229             11          250      240   \n",
+       "      FAC_WDAVG  FAC_SPRFAL  modAadt  aadtAdjFac  modForecast  obsAadt  \\\n",
+       "0        0.9840     1.02960      129         286          400      415   \n",
+       "1        0.9840     1.02960      217         198          400      415   \n",
+       "2        0.9840     1.02960       78         337          400      415   \n",
+       "3        0.9840     1.02960       78         294          350      372   \n",
+       "4        0.9840     1.02960       82         290          350      372   \n",
+       "...         ...         ...      ...         ...          ...      ...   \n",
+       "6858     0.9840     1.02960     1784         207         2000     1991   \n",
+       "6859     0.9840     1.02960     1285         706         2000     1991   \n",
+       "6860     0.9840     1.02960     2417        -578         1800     1839   \n",
+       "6861     0.8535     0.93410     1335        -763          550      572   \n",
+       "6862     1.0712     1.01795      229          11          250      240   \n",
        "\n",
        "      ModVsObs  \n",
        "0          -15  \n",
@@ -5172,7 +5176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5182,7 +5186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -5220,7 +5224,7 @@
        "      <th>FAC_WDAVG</th>\n",
        "      <th>FAC_SPRFAL</th>\n",
        "      <th>modAadt</th>\n",
-       "      <th>aadtAdjFactor</th>\n",
+       "      <th>aadtAdjFac</th>\n",
        "      <th>modForecast</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -5360,16 +5364,16 @@
        "30528  WFv901_Segments_20240226_Draft.shp       1.0   1.0105   1.0112   \n",
        "34938  WFv901_Segments_20240226_Draft.shp       1.0   1.0105   1.0112   \n",
        "\n",
-       "       FAC_WDAVG  FAC_SPRFAL  modAadt  aadtAdjFactor  modForecast  \n",
-       "13677     1.1568     1.01085    38686          -5538        33000  \n",
-       "17780     1.1568     1.01085    45862          -5538        40500  \n",
-       "21963     1.1568     1.01085    54386          -5538        49000  \n",
-       "26191     1.1568     1.01085    85468          -5538        80000  \n",
-       "30528     1.1568     1.01085   108231          -5538       103000  \n",
-       "34938     1.1568     1.01085   134430          -5538       129000  "
+       "       FAC_WDAVG  FAC_SPRFAL  modAadt  aadtAdjFac  modForecast  \n",
+       "13677     1.1568     1.01085    38686       -5538        33000  \n",
+       "17780     1.1568     1.01085    45862       -5538        40500  \n",
+       "21963     1.1568     1.01085    54386       -5538        49000  \n",
+       "26191     1.1568     1.01085    85468       -5538        80000  \n",
+       "30528     1.1568     1.01085   108231       -5538       103000  \n",
+       "34938     1.1568     1.01085   134430       -5538       129000  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
