--- a/tools/stitch-two-shapefiles/_Stitch-Two-Shapefiles.ipynb
+++ b/tools/stitch-two-shapefiles/_Stitch-Two-Shapefiles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,9 +51,14 @@
     }
    ],
    "source": [
-    "# Select and export non-wfrc area (subareaid <> 1)\n",
-    "arcpy.SelectLayerByAttribute_management(original_non_wfrc_shp, \"NEW_SELECTION\", \"SUBAREAID <> 1\")\n",
-    "arcpy.CopyFeatures_management(original_non_wfrc_shp, non_wfrc_shp)\n",
+    "# Create a feature layer from the original shapefile\n",
+    "arcpy.MakeFeatureLayer_management(original_non_wfrc_shp, \"non_wfrc_lyr\")\n",
+    "\n",
+    "# Select features where SUBAREAID is not equal to 1\n",
+    "arcpy.SelectLayerByAttribute_management(\"non_wfrc_lyr\", \"NEW_SELECTION\", \"SUBAREAID <> 1\")\n",
+    "\n",
+    "# Copy the selected features to a new shapefile\n",
+    "arcpy.CopyFeatures_management(\"non_wfrc_lyr\", non_wfrc_shp)\n",
     "\n",
     "# Merge with wfrc shape\n",
     "arcpy.Merge_management([non_wfrc_shp, wfrc_shp], merged_shp)\n",
@@ -64,13 +69,6 @@
     "\n",
     "print(\"Process completed successfully.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
