--- a/6-Prepare-Forecasts-For-Volume-Map.ipynb
+++ b/6-Prepare-Forecasts-For-Volume-Map.ipynb
@@ -2677,11 +2677,386 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create TAZ json\n",
+    "\n",
+    "Example record: \n",
+    "```\n",
+    "  {\n",
+    "    \"CO_TAZID\": 50856,\n",
+    "    \"CityArea\": \"Logan\",\n",
+    "    \"ModelArea\": \"Cache Travel Model\",\n",
+    "    \"DEVACRES\": 349.146,\n",
+    "    \"TAZID\": 7580,\n",
+    "    \"CO_FIPS\": 5,\n",
+    "    \"CO_NAME\": \"CACHE\"\n",
+    "  }\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CO_TAZID</th>\n",
+       "      <th>CityArea</th>\n",
+       "      <th>ModelArea</th>\n",
+       "      <th>DEVACRES</th>\n",
+       "      <th>TAZID</th>\n",
+       "      <th>CO_FIPS</th>\n",
+       "      <th>CO_NAME</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>50001</td>\n",
+       "      <td>Cornish</td>\n",
+       "      <td>Cache Travel Demand Model</td>\n",
+       "      <td>490.0959</td>\n",
+       "      <td>7092</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CACHE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50002</td>\n",
+       "      <td>Cornish</td>\n",
+       "      <td>Cache Travel Demand Model</td>\n",
+       "      <td>564.3828</td>\n",
+       "      <td>7093</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CACHE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>50003</td>\n",
+       "      <td>Cornish</td>\n",
+       "      <td>Cache Travel Demand Model</td>\n",
+       "      <td>263.5285</td>\n",
+       "      <td>7094</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CACHE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>50004</td>\n",
+       "      <td>Cornish</td>\n",
+       "      <td>Cache Travel Demand Model</td>\n",
+       "      <td>324.9306</td>\n",
+       "      <td>7095</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CACHE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>50005</td>\n",
+       "      <td>Cornish</td>\n",
+       "      <td>Cache Travel Demand Model</td>\n",
+       "      <td>269.1452</td>\n",
+       "      <td>7096</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CACHE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9810</th>\n",
+       "      <td>491290</td>\n",
+       "      <td>Eastside Mountains</td>\n",
+       "      <td>Wasatch Front Travel Demand Model</td>\n",
+       "      <td>55.9669</td>\n",
+       "      <td>7051</td>\n",
+       "      <td>49</td>\n",
+       "      <td>UTAH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9811</th>\n",
+       "      <td>491292</td>\n",
+       "      <td>Eastside Mountains</td>\n",
+       "      <td>Wasatch Front Travel Demand Model</td>\n",
+       "      <td>1207.1884</td>\n",
+       "      <td>7053</td>\n",
+       "      <td>49</td>\n",
+       "      <td>UTAH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9812</th>\n",
+       "      <td>491288</td>\n",
+       "      <td>Eastside Mountains</td>\n",
+       "      <td>Wasatch Front Travel Demand Model</td>\n",
+       "      <td>288.9022</td>\n",
+       "      <td>7049</td>\n",
+       "      <td>49</td>\n",
+       "      <td>UTAH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9813</th>\n",
+       "      <td>491330</td>\n",
+       "      <td>Eastside Mountains</td>\n",
+       "      <td>Wasatch Front Travel Demand Model</td>\n",
+       "      <td>40957.2801</td>\n",
+       "      <td>7091</td>\n",
+       "      <td>49</td>\n",
+       "      <td>UTAH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9814</th>\n",
+       "      <td>491291</td>\n",
+       "      <td>Eastside Mountains</td>\n",
+       "      <td>Wasatch Front Travel Demand Model</td>\n",
+       "      <td>708.2605</td>\n",
+       "      <td>7052</td>\n",
+       "      <td>49</td>\n",
+       "      <td>UTAH</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9815 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      CO_TAZID            CityArea                          ModelArea  \\\n",
+       "0        50001             Cornish          Cache Travel Demand Model   \n",
+       "1        50002             Cornish          Cache Travel Demand Model   \n",
+       "2        50003             Cornish          Cache Travel Demand Model   \n",
+       "3        50004             Cornish          Cache Travel Demand Model   \n",
+       "4        50005             Cornish          Cache Travel Demand Model   \n",
+       "...        ...                 ...                                ...   \n",
+       "9810    491290  Eastside Mountains  Wasatch Front Travel Demand Model   \n",
+       "9811    491292  Eastside Mountains  Wasatch Front Travel Demand Model   \n",
+       "9812    491288  Eastside Mountains  Wasatch Front Travel Demand Model   \n",
+       "9813    491330  Eastside Mountains  Wasatch Front Travel Demand Model   \n",
+       "9814    491291  Eastside Mountains  Wasatch Front Travel Demand Model   \n",
+       "\n",
+       "        DEVACRES  TAZID  CO_FIPS CO_NAME  \n",
+       "0       490.0959   7092        5   CACHE  \n",
+       "1       564.3828   7093        5   CACHE  \n",
+       "2       263.5285   7094        5   CACHE  \n",
+       "3       324.9306   7095        5   CACHE  \n",
+       "4       269.1452   7096        5   CACHE  \n",
+       "...          ...    ...      ...     ...  \n",
+       "9810     55.9669   7051       49    UTAH  \n",
+       "9811   1207.1884   7053       49    UTAH  \n",
+       "9812    288.9022   7049       49    UTAH  \n",
+       "9813  40957.2801   7091       49    UTAH  \n",
+       "9814    708.2605   7052       49    UTAH  \n",
+       "\n",
+       "[9815 rows x 7 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Import necessary libraries\n",
+    "from arcgis.gis import GIS\n",
+    "from arcgis.features import FeatureLayer\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Connect to ArcGIS Online\n",
+    "gis = GIS()\n",
+    "\n",
+    "# URL of the feature layer\n",
+    "layer_url = \"https://services1.arcgis.com/taguadKoI1XFwivx/arcgis/rest/services/Typical_Jobs_Projections_TAZ_RTP_2023/FeatureServer/0\"\n",
+    "\n",
+    "# Access the feature layer\n",
+    "feature_layer = FeatureLayer(layer_url)\n",
+    "\n",
+    "# Query the feature layer to get all features\n",
+    "features = feature_layer.query(where=\"1=1\")\n",
+    "\n",
+    "# Convert the features to a list of dictionaries\n",
+    "feature_dicts = [feature.as_dict for feature in features.features]\n",
+    "\n",
+    "# Extract only the attributes\n",
+    "attributes = [feature['attributes'] for feature in feature_dicts]\n",
+    "\n",
+    "# Create a DataFrame from attributes\n",
+    "dfTaz = pd.DataFrame(attributes)\n",
+    "\n",
+    "dfTaz = dfTaz[['CO_TAZID','CityArea','ModelArea','DEVACRES','TAZID','CO_FIPS','CO_NAME']]\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "display(dfTaz)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# export to json\n",
+    "dfTaz.to_json('_site-traffic-volume-map/widgets/ForecastSidebar/data/tazdata.json', orient='records', indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
+       "      <th>label</th>\n",
+       "      <th>co_fips</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cornish</td>\n",
+       "      <td>Cornish</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Lewiston</td>\n",
+       "      <td>Lewiston</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>Clarkston</td>\n",
+       "      <td>Clarkston</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>Trenton</td>\n",
+       "      <td>Trenton</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>Amalga</td>\n",
+       "      <td>Amalga</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9737</th>\n",
+       "      <td>Westside Mountains</td>\n",
+       "      <td>Westside Mountains</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9738</th>\n",
+       "      <td>South Goshen Valley</td>\n",
+       "      <td>South Goshen Valley</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9739</th>\n",
+       "      <td>South Cedar Valley</td>\n",
+       "      <td>South Cedar Valley</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9741</th>\n",
+       "      <td>Camp Williams</td>\n",
+       "      <td>Camp Williams</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9776</th>\n",
+       "      <td>Eastside Mountains</td>\n",
+       "      <td>Eastside Mountains</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>318 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    value                label  co_fips\n",
+       "0                 Cornish              Cornish        5\n",
+       "16               Lewiston             Lewiston        5\n",
+       "49              Clarkston            Clarkston        5\n",
+       "57                Trenton              Trenton        5\n",
+       "74                 Amalga               Amalga        5\n",
+       "...                   ...                  ...      ...\n",
+       "9737   Westside Mountains   Westside Mountains       49\n",
+       "9738  South Goshen Valley  South Goshen Valley       49\n",
+       "9739   South Cedar Valley   South Cedar Valley       49\n",
+       "9741        Camp Williams        Camp Williams       49\n",
+       "9776   Eastside Mountains   Eastside Mountains       49\n",
+       "\n",
+       "[318 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# city areas to json\n",
+    "dfCityAreas = dfTaz[['CityArea','CO_FIPS']].drop_duplicates()\n",
+    "dfCityAreas = dfCityAreas[['CityArea','CityArea','CO_FIPS']]\n",
+    "dfCityAreas.columns = ('value','label','co_fips')\n",
+    "dfCityAreas.to_json('_site-traffic-volume-map/widgets/ForecastSidebar/data/cityareasdata.json', orient='records', indent=2)\n",
+    "dfCityAreas"
+   ]
   }
  ],
  "metadata": {
