Add truck subtitle to notebook

--- a/tools/add-aadt-to-segments/_Add-AADT-to-Segment-File.ipynb
+++ b/tools/add-aadt-to-segments/_Add-AADT-to-Segment-File.ipynb
@@ -13452,6 +13452,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add Trucks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
